--- a/index.html
+++ b/index.html
@@ -21,17 +21,47 @@
     <title>ميسر</title>
 
 
-
+    <!-- link bootstrap icons  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <!-- link bootstrap rtl css file -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
+        integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+    <!-- link swiper css for sliders -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <!-- link animation css file  -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- add  main style sheet  -->
+    <link rel="stylesheet" href="css/main-style.css">
+    <!-- link index style file  -->
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 
 <body>
 
-    <div></div>
+    <!-- start header and land section -->
+    <header>
+
+    </header>
+
+    <!-- start header and land section -->
+    <main>
+
+    </main>
 
 
 
+    <!-- link bootstrap js file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- link swiper js file -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- link animation js file -->
+    <script script src="js/wow.min.js"></script>
+    <!-- link main js file -->
+    <script src="js/main.js"></script>
 
 
 </body>
