--- a/index.html
+++ b/index.html
@@ -169,10 +169,29 @@
         <!-- end land section -->
 
     </header>
-
     <!-- start header and land section -->
     <main>
 
+        <!-- start about us -->
+        <section class="about-us my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-5 mb-3">
+                        <img src="images/img2.png" class="img-fluid w-100" alt="">
+                    </div>
+                    <div class="col-xl-6 col-lg-7   ms-xl-3  d-flex flex-column gap-1 mb-3">
+                        <h2>تكنولوجية أمريكية موائمة لمتطلبات السوق الأردني</h2>
+                        <p>يقع مركزنا الرئيسي في "كاليفورنيا، الولايات المتحدة" لذا فإننا نقدّم نظامًا أمريكيًا متطوّرًا
+                            يخدم الاحتياجات الحاليّة والمتطلبات المستقبلية للمجتمع الطبي الأردني، ويعِد بتقديم حلول
+                            مبتكرة لازدهار عيادتك.</p>
+                        <a href="#" class="join-us-btn btn mt-4">انضم إلينا</a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- end about us -->
     </main>
 
 
