end benfites section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="about-us my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-5 mb-3">
+                    <div class="col-lg-5 mb-3 rounded-img">
                         <img src="images/img2.png" class="img-fluid w-100" alt="">
                     </div>
                     <div class="col-xl-6 col-lg-7   ms-xl-3  d-flex flex-column gap-1 mb-3">
@@ -190,8 +190,96 @@
                 </div>
             </div>
         </section>
-
         <!-- end about us -->
+
+
+        <!-- start benfits -->
+
+        <section class="benfits my-5 py-5">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3  wow fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.6s">
+                        <h2>اجعل قائمة مرضاك ثريّة وعزّز انتشارك</h2>
+                        <p>نحن نيسّر وصول أكبر عدد من المرضى الذين يبحثون عنك، ما سيقود للنمو السريع لاسمك.</p>
+                    </div>
+                    <div class="col-lg-5 mb-3 rounded-img  wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0.6s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="">
+                    </div>
+                </div>
+
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-5 mb-3 rounded-img wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.7s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="" data-wow-duration="2s"
+                            data-wow-delay="0.5s">
+                    </div>
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3 wow fadeInLeft" data-wow-duration="2s"
+                        data-wow-delay="0.7s">
+                        <h2>نظّم مهامك عملك وجدول حجوزاتك</h2>
+                        <p>تستطيع الوصول إلى السجل الطبي الإلكتروني لمرضاك والاطلاع على كافة بياناتهم الطبية بكل يسر،
+                            وأيضًا نرسل لمرضاك رسائل تذكيرية بمواعيدهم في عيادتك حتى نقلص عدد إلغاء الحجوزات.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3  wow fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.6s">
+                        <h2>عزّز عائدك المادي</h2>
+                        <p>سيقودك التعاون مع منصة "ميسر" إلى زيادة حصيلة أرباحك وتحقيق معدل نمو أعلى من ذي قبل، بفضل
+                            ترويجنا لخبرتك وخدماتك عبر منصتنا.</p>
+                    </div>
+                    <div class="col-lg-5 mb-3 rounded-img  wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0.6s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="">
+                    </div>
+                </div>
+
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-5 mb-3 rounded-img wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.7s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="" data-wow-duration="2s"
+                            data-wow-delay="0.5s">
+                    </div>
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3 wow fadeInLeft" data-wow-duration="2s"
+                        data-wow-delay="0.7s">
+                        <h2>أدِر عيادتك أينما كنت</h2>
+                        <p>لا يتعيّن عليك حمل أوراقك ودفاترك، يمكّنك السجل الإلكتروني من الوصول إلى كافة البيانات الطبية
+                            لمرضاك من أي متصفح سواء من هاتفك أو جهازك اللوحي أو حاسوبك في أي وقت، ومن أي مكان.
+                        </p>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3 wow fadeInLeft" data-wow-duration="2s"
+                        data-wow-delay="0.7s">
+                        <h2>أحل وصفتك أو فحوصاتك الطبية إلى الجهات التي تثق بها</h2>
+                        <p>احظ بتجربة استثنائية وحوّل وصفتك الطبية والفحوصات المختبرية والأشعة التشخيصية التي تطلبها،
+                            إلى الصيدليات والمعامل ومراكز الأشعة التي تثق بها.
+                        </p>
+                    </div>
+                    <div class="col-lg-5 mb-3 rounded-img wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.7s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="" data-wow-duration="2s"
+                            data-wow-delay="0.5s">
+                    </div>
+
+                </div>
+
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-5 mb-3 rounded-img wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.7s">
+                        <img src="images/img3.png" class="img-fluid w-100" alt="" data-wow-duration="2s"
+                            data-wow-delay="0.5s">
+                    </div>
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3 wow fadeInLeft" data-wow-duration="2s"
+                        data-wow-delay="0.7s">
+                        <h2>شارك خبرتك من خلال خاصية الاستشارة أونلاين</h2>
+                        <p>تعزيز عائدك المادي والوصول إلى المرضى لن يقتصر فقط على عيادتك، يتيح "ميسر" لمرضاه طرح استشارة
+                            طبية عبر منصته، أو طلب قراءة تقرير طبي ويمكنك أن تكون أحد المشاركين بخبرتهم في الرد.
+                        </p>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+        <!-- end benfits -->
     </main>
 
 
