end with muser section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
         <!-- start benfits -->
 
-        <section class="benfits my-5 py-5">
+        <section class="benfits my-5 py-5 overflow-hidden">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-6   d-flex flex-column gap-1 mb-3  wow fadeInRight" data-wow-duration="2s"
@@ -280,6 +280,40 @@
             </div>
         </section>
         <!-- end benfits -->
+
+        <!-- start  with-muser -->
+        <section class="with-muser p-5 my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container py-5">
+                <div class="row justify-content-center align-items-center text-center">
+                    <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center gap-1 mx-auto">
+                        <h3>مع ُميسِّر عيادتك ميسرة</h3>
+                        <p>الأمر يسير ولن يتطلب الأمر سوى اتصال بالإنترنت، لا حاجة إلى تحميل برامج وتثبيتها، أو خبرة
+                            بإدارة العيادات لاستخدام نظامنا</p>
+                        <a href="#" class="btn btn-trynow ">جرّب هذا الآن</a>
+                    </div>
+                </div>
+                <div class="plus1">
+                    <img src="images/plus.png" alt="">
+                </div>
+                <div class="plus2">
+                    <img src="images/plus.png" width="20" alt="">
+                </div>
+                <div class="plus3">
+                    <img src="images/plus.png" width="36" alt="">
+                </div>
+                <div class="plus4">
+                    <img src="images/plus.png" width="70" alt="">
+                </div>
+                <div class="plus5">
+                    <img src="images/plus.png" width="26" alt="">
+                </div>
+                <div class="plus6">
+                    <img src="images/plus.png" width="16" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- end with-muser  -->
     </main>
 
 
