--- a/index.html
+++ b/index.html
@@ -317,6 +317,104 @@
     </main>
 
 
+    <!-- start footer -->
+
+    <footer class="py-5  wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.8s">
+
+        <div class="container py-4 pt-5">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="">
+                    </a>
+
+                    <p class=" mt-4 pe-lg-5 ">
+                        ميسر هي أول منصة تمكنك من إدارة عيادتك وتنظيم مهامك، بالإضافة إلى الترويج لخبرتك عبرها حتى
+                        تستقطب مزيدًا من المرضى الذين يبحثون عنك </p>
+                </div>
+
+                <div class="col-lg-2 col-sm-6 mb-4">
+                    <h5> صفحاتنا </h5>
+                    <ul class="nav flex-column mt-3">
+                        <li class="nav-item">
+                            <a class="nav-link " href="index.html">الرئيسية</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">المميزات والحلول</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">المدونة</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"> تسجيل الدخول </a>
+                        </li>
+
+
+
+                    </ul>
+
+
+                </div>
+                <div class="col-lg-2 col-sm-6 mb-4">
+                    <h5> الخدمات </h5>
+                    <ul class="nav flex-column mt-3">
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">حولنا</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">الأسئلة الشائعة</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">الوظائف</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"> تواصل معنا </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="d-flex gap-4  justify-content-lg-center align-items-center ">
+                        <a href="#" class="contact-icon">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        <a href="#" class="contact-icon">
+                            <i class="bi bi-instagram "></i>
+                        </a>
+                        <a href="#" class="contact-icon">
+                            <i class="bi bi-twitter "></i>
+                        </a>
+
+                        <a href="#" class="contact-icon">
+                            <i class="bi bi-linkedin "></i>
+                        </a>
+
+                    </div>
+
+                    <div class="lang-select  d-flex justify-content-lg-center ">
+                        <select class="form-select mt-4   " dir="ltr" aria-label="Default select example">
+                            <option selected>English - En</option>
+                            <option value="1">Arabic -Ar</option>
+                        </select>
+                        <img src="images/android-globe.png" class="over-select-btn" alt="">
+                    </div>
+
+                    <h4 class="mt-3 text-lg-center">وسائل الدفع المتاحة</h4>
+                    <div class="d-flex justify-content-lg-center mt-2">
+                        <img src="images/image 6.png" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        </div>
+
+
+    </footer>
+
+    <!-- end footer -->
+
+
 
     <!-- link bootstrap js file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
