end blogs section

--- a/index.html
+++ b/index.html
@@ -314,6 +314,138 @@
             </div>
         </section>
         <!-- end with-muser  -->
+
+        <!-- start blogs -->
+
+        <section class=" blogs  my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container ">
+                <div class="d-flex flex-sm-row flex-column justify-content-between align-items-center mb-3">
+                    <h4>ابق مطلعًا على أحدث مقالاتنا</h4>
+                    <a href="#" class=" d-flex align-items-center gap-2">عرض الكل <i class="bi bi-arrow-left mt-2"></i>
+                    </a>
+                </div>
+                <div class="row align-items-center ">
+                    <div class="col-lg-6 mb-3 rounded-img">
+                        <a href="#">
+                            <figure>
+                                <img src="images/img_7.png" class="img-fluid w-100" alt="">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                        <a href="#" class="blog-title">
+                            <h3 class=" mb-4 ">ما هي أضرار البروتينات على الرجال؟</h3>
+                        </a>
+                        <p class="lines3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
+                            مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
+                            التى يولدها التطبيق.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="row align-items-center mt-4  small-blogs ">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8.png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8 (1).png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8 (2).png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+                </div>
+
+            </div>
+        </section>
+        <!-- end blogs  -->
+
+
+        <!-- start  with-muser -->
+        <section class="with-muser p-5 my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container py-5">
+                <div class="row justify-content-center align-items-center text-center">
+                    <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center gap-1 mx-auto">
+                        <h3>منصة ميسر للخدمات الطبية، عيادتك ميسرة</h3>
+                        <p>مستقبل الرعاية الصحية يبدأ هنا</p>
+                        <a href="#" class="btn btn-trynow "> انضم إلينا</a>
+                    </div>
+                </div>
+                <div class="plus1">
+                    <img src="images/plus.png" alt="">
+                </div>
+                <div class="plus2">
+                    <img src="images/plus.png" width="20" alt="">
+                </div>
+                <div class="plus3">
+                    <img src="images/plus.png" width="36" alt="">
+                </div>
+                <div class="plus4">
+                    <img src="images/plus.png" width="70" alt="">
+                </div>
+                <div class="plus5">
+                    <img src="images/plus.png" width="26" alt="">
+                </div>
+                <div class="plus6">
+                    <img src="images/plus.png" width="16" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- end with-muser  -->
     </main>
 
 
