end services section

--- a/index.html
+++ b/index.html
@@ -315,6 +315,168 @@
         </section>
         <!-- end with-muser  -->
 
+
+        <!-- start services -->
+        <section class="services ">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6   d-flex flex-column gap-1 mb-3 wow fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.5s">
+                        <span>الخدمات</span>
+                        <h2>لماذا يعد ميسر للخدمات الطبية شريكاً مثالياً لأعمالك؟</h2>
+                        <p>اكتشف كيف يساعد نظام ميسر في ادارة أعمال بكفاءة وفعالية </p>
+
+                    </div>
+                    <div class="col-lg-5 col-10 mb-3 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0.5s">
+                        <img src="images/Group 1000002890.png" class="img-fluid w-100" alt="">
+                    </div>
+
+
+                </div>
+
+                <div class="row   some-services mx-2  wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
+                    <div class="col-lg-4 p-5 col-12 about-services">
+                        <p> واكب التطورات التي تشهدها الرعاية الصحية اليوم واحصل على تجربة استتنائية مع نظام ميسرالذي
+                            يظم
+                            أكثر واجهات الاستخدام يسراًلإدارة العيادات والمراكز الطبية</p>
+
+                        <a href="#" class="btn btn-outline-light px-5 mt-3">مشاهدة المزيد</a>
+                    </div>
+
+                    <div class="col-lg-4 py-5 col-md-6  services-cards">
+                        <div class="d-flex align-items-center mb-3 gap-3 services-card">
+                            <div class="serv-icon">
+                                <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_308_1673)">
+                                        <path
+                                            d="M29.2906 0.527832H10.7552C9.99681 0.527832 9.3822 1.14244 9.3822 1.9008V8.62846C9.3822 9.38682 9.99681 10.0014 10.7552 10.0014H29.2906C30.049 10.0014 30.6636 9.38682 30.6636 8.62846V1.9008C30.6636 1.14244 30.049 0.527832 29.2906 0.527832ZM27.9177 7.25549H12.1281V3.27385H27.9176V7.25549H27.9177Z"
+                                            fill="#B8860B" />
+                                        <path d="M27.3227 8.67432H24.5767V14.9901H27.3227V8.67432Z" fill="#B8860B" />
+                                        <path d="M15.4234 8.67432H12.6774V14.9901H15.4234V8.67432Z" fill="#B8860B" />
+                                        <path
+                                            d="M29.9771 13.6172H10.0229C8.76106 13.6172 7.7345 14.6437 7.7345 15.9055V38.2396C7.7345 39.5014 8.76106 40.528 10.0229 40.528H29.9771C31.2389 40.528 32.2654 39.5014 32.2654 38.2396V15.9055C32.2654 14.6437 31.2389 13.6172 29.9771 13.6172ZM29.5194 37.782H10.4805V16.3632H29.5194V37.782Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M19.9999 20.8022C19.2416 20.8022 18.627 21.4169 18.627 22.1752V31.9693C18.627 32.7276 19.2416 33.3422 19.9999 33.3422C20.7583 33.3422 21.3729 32.7276 21.3729 31.9693V22.1752C21.3729 21.4169 20.7583 20.8022 19.9999 20.8022Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M24.897 25.6997H15.1029C14.3446 25.6997 13.73 26.3143 13.73 27.0727C13.73 27.831 14.3446 28.4456 15.1029 28.4456H24.897C25.6558 28.4456 26.27 27.831 26.27 27.0727C26.27 26.3143 25.6554 25.6997 24.897 25.6997Z"
+                                            fill="#B8860B" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_308_1673">
+                                            <rect width="40" height="40" fill="white"
+                                                transform="translate(0 0.527832)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <h6 class="mb-0">إدارة ملفات المرضى</h6>
+
+                        </div>
+
+                        <div class="d-flex align-items-center mb-3 gap-3 services-card">
+                            <div class="serv-icon">
+                                <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_308_1673)">
+                                        <path
+                                            d="M29.2906 0.527832H10.7552C9.99681 0.527832 9.3822 1.14244 9.3822 1.9008V8.62846C9.3822 9.38682 9.99681 10.0014 10.7552 10.0014H29.2906C30.049 10.0014 30.6636 9.38682 30.6636 8.62846V1.9008C30.6636 1.14244 30.049 0.527832 29.2906 0.527832ZM27.9177 7.25549H12.1281V3.27385H27.9176V7.25549H27.9177Z"
+                                            fill="#B8860B" />
+                                        <path d="M27.3227 8.67432H24.5767V14.9901H27.3227V8.67432Z" fill="#B8860B" />
+                                        <path d="M15.4234 8.67432H12.6774V14.9901H15.4234V8.67432Z" fill="#B8860B" />
+                                        <path
+                                            d="M29.9771 13.6172H10.0229C8.76106 13.6172 7.7345 14.6437 7.7345 15.9055V38.2396C7.7345 39.5014 8.76106 40.528 10.0229 40.528H29.9771C31.2389 40.528 32.2654 39.5014 32.2654 38.2396V15.9055C32.2654 14.6437 31.2389 13.6172 29.9771 13.6172ZM29.5194 37.782H10.4805V16.3632H29.5194V37.782Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M19.9999 20.8022C19.2416 20.8022 18.627 21.4169 18.627 22.1752V31.9693C18.627 32.7276 19.2416 33.3422 19.9999 33.3422C20.7583 33.3422 21.3729 32.7276 21.3729 31.9693V22.1752C21.3729 21.4169 20.7583 20.8022 19.9999 20.8022Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M24.897 25.6997H15.1029C14.3446 25.6997 13.73 26.3143 13.73 27.0727C13.73 27.831 14.3446 28.4456 15.1029 28.4456H24.897C25.6558 28.4456 26.27 27.831 26.27 27.0727C26.27 26.3143 25.6554 25.6997 24.897 25.6997Z"
+                                            fill="#B8860B" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_308_1673">
+                                            <rect width="40" height="40" fill="white"
+                                                transform="translate(0 0.527832)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <h6 class="mb-0">إدارة ملفات المرضى</h6>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-4 py-5 col-md-6 services-cards">
+                        <div class="d-flex align-items-center mb-3 gap-3 services-card">
+                            <div class="serv-icon">
+                                <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_308_1673)">
+                                        <path
+                                            d="M29.2906 0.527832H10.7552C9.99681 0.527832 9.3822 1.14244 9.3822 1.9008V8.62846C9.3822 9.38682 9.99681 10.0014 10.7552 10.0014H29.2906C30.049 10.0014 30.6636 9.38682 30.6636 8.62846V1.9008C30.6636 1.14244 30.049 0.527832 29.2906 0.527832ZM27.9177 7.25549H12.1281V3.27385H27.9176V7.25549H27.9177Z"
+                                            fill="#B8860B" />
+                                        <path d="M27.3227 8.67432H24.5767V14.9901H27.3227V8.67432Z" fill="#B8860B" />
+                                        <path d="M15.4234 8.67432H12.6774V14.9901H15.4234V8.67432Z" fill="#B8860B" />
+                                        <path
+                                            d="M29.9771 13.6172H10.0229C8.76106 13.6172 7.7345 14.6437 7.7345 15.9055V38.2396C7.7345 39.5014 8.76106 40.528 10.0229 40.528H29.9771C31.2389 40.528 32.2654 39.5014 32.2654 38.2396V15.9055C32.2654 14.6437 31.2389 13.6172 29.9771 13.6172ZM29.5194 37.782H10.4805V16.3632H29.5194V37.782Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M19.9999 20.8022C19.2416 20.8022 18.627 21.4169 18.627 22.1752V31.9693C18.627 32.7276 19.2416 33.3422 19.9999 33.3422C20.7583 33.3422 21.3729 32.7276 21.3729 31.9693V22.1752C21.3729 21.4169 20.7583 20.8022 19.9999 20.8022Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M24.897 25.6997H15.1029C14.3446 25.6997 13.73 26.3143 13.73 27.0727C13.73 27.831 14.3446 28.4456 15.1029 28.4456H24.897C25.6558 28.4456 26.27 27.831 26.27 27.0727C26.27 26.3143 25.6554 25.6997 24.897 25.6997Z"
+                                            fill="#B8860B" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_308_1673">
+                                            <rect width="40" height="40" fill="white"
+                                                transform="translate(0 0.527832)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <h6 class="mb-0">إدارة ملفات المرضى</h6>
+
+                        </div>
+
+                        <div class="d-flex align-items-center mb-3 gap-3 services-card">
+                            <div class="serv-icon">
+                                <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_308_1673)">
+                                        <path
+                                            d="M29.2906 0.527832H10.7552C9.99681 0.527832 9.3822 1.14244 9.3822 1.9008V8.62846C9.3822 9.38682 9.99681 10.0014 10.7552 10.0014H29.2906C30.049 10.0014 30.6636 9.38682 30.6636 8.62846V1.9008C30.6636 1.14244 30.049 0.527832 29.2906 0.527832ZM27.9177 7.25549H12.1281V3.27385H27.9176V7.25549H27.9177Z"
+                                            fill="#B8860B" />
+                                        <path d="M27.3227 8.67432H24.5767V14.9901H27.3227V8.67432Z" fill="#B8860B" />
+                                        <path d="M15.4234 8.67432H12.6774V14.9901H15.4234V8.67432Z" fill="#B8860B" />
+                                        <path
+                                            d="M29.9771 13.6172H10.0229C8.76106 13.6172 7.7345 14.6437 7.7345 15.9055V38.2396C7.7345 39.5014 8.76106 40.528 10.0229 40.528H29.9771C31.2389 40.528 32.2654 39.5014 32.2654 38.2396V15.9055C32.2654 14.6437 31.2389 13.6172 29.9771 13.6172ZM29.5194 37.782H10.4805V16.3632H29.5194V37.782Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M19.9999 20.8022C19.2416 20.8022 18.627 21.4169 18.627 22.1752V31.9693C18.627 32.7276 19.2416 33.3422 19.9999 33.3422C20.7583 33.3422 21.3729 32.7276 21.3729 31.9693V22.1752C21.3729 21.4169 20.7583 20.8022 19.9999 20.8022Z"
+                                            fill="#B8860B" />
+                                        <path
+                                            d="M24.897 25.6997H15.1029C14.3446 25.6997 13.73 26.3143 13.73 27.0727C13.73 27.831 14.3446 28.4456 15.1029 28.4456H24.897C25.6558 28.4456 26.27 27.831 26.27 27.0727C26.27 26.3143 25.6554 25.6997 24.897 25.6997Z"
+                                            fill="#B8860B" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_308_1673">
+                                            <rect width="40" height="40" fill="white"
+                                                transform="translate(0 0.527832)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <h6 class="mb-0">إدارة ملفات المرضى</h6>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end services -->
         <!-- start blogs -->
 
         <section class=" blogs  my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
