end packages and end all index page

--- a/index.html
+++ b/index.html
@@ -315,7 +315,6 @@
         </section>
         <!-- end with-muser  -->
 
-
         <!-- start services -->
         <section class="services ">
             <div class="container">
@@ -477,6 +476,70 @@
             </div>
         </section>
         <!-- end services -->
+
+        <!-- start packages -->
+        <section class="packages wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container ">
+                <div class="d-flex justify-content-center align-items-center text-center">
+                    <h2>هذا هو الوقت المثالي لانطلاقك مع ميسر، <br> <span>هل أنت مستعد؟</span></h2>
+                </div>
+
+                <div class="row justify-content-center ">
+                    <div class="col-lg-4  col-md-6 mb-3">
+                        <div class=" step step1  p-5 mx-auto">
+                            <h3>اختر باقتك المناسبة</h3>
+                            <div class="number">
+                                <img src="images/1.png" alt="">
+                            </div>
+                            <div class="arrow">
+                                <img src="images/arrow.png" alt="">
+                            </div>
+                            <div class="arrowhead">
+                                <img src="images/arrowhead.png" alt="">
+                            </div>
+                            <div class="difarrow">
+                                <img src="images/difrarrow.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3 ">
+                        <div class=" step step2 p-5 mx-auto">
+                            <h3>ترقّب زيارة أحد ممثلي شركتنا لتوقيع العقد</h3>
+                            <div class="number">
+                                <img src="images/2.png" alt="">
+                            </div>
+                            <div class="arrow">
+                                <img src="images/arrow.png" alt="">
+                            </div>
+                            <div class="arrowhead">
+                                <img src="images/arrowhead.png" alt="">
+                            </div>
+                            <div class="difarrow">
+                                <img src="images/difrarrow.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3 ">
+                        <div class=" step step3 p-5 mx-auto">
+                            <h3>تمتّع بإدارة عيادتك واستقبال حجوزاتك بكل يسر</h3>
+                            <div class="number">
+                                <img src="images/3.png" alt="">
+                            </div>
+                            <div class="difarrow">
+                                <img src="images/difrarrow.png" alt="">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center align-items-center text-center mt-5">
+                    <a href="#" class="btn join-us-btn">اعرف أكثر عن باقاتنا المميزة</a>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- end packages -->
         <!-- start blogs -->
 
         <section class=" blogs  my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
