--- a/index.html
+++ b/index.html
@@ -1297,6 +1297,11 @@
                         </select>
                         <img src="images/android-globe.png" class="over-select-btn" alt="">
                     </div>
+                    <div class="country-footer mt-3 d-flex align-items-center gap-2 justify-content-lg-center ">
+                        <h6 class="mb-0"> البلد :</h6>
+                        <a class=" country  " aria-current="page"> غير محدد </a>
+                    </div>
+
 
                     <h4 class="mt-3 text-lg-center">وسائل الدفع المتاحة</h4>
                     <div class="d-flex justify-content-lg-center mt-2">
